Build frontend in Docker image